# ode_solver

./: Doxyfile  README.md
html/: EulerModified_8cpp.html  EulerModified_8h.html  EulerModified_8h_source.html  Euler_8cpp.html  Euler_8h.html  Euler_8h_source.html  OdeSolverNew_8cpp.html  OdeSolverNew_8h.html  OdeSolverNew_8h_source.html  OdeSolver_8cpp.html  OdeSolver_8h.html  OdeSolver_8h_source.html  RungeKuttaNew_8cpp.html  RungeKuttaNew_8h.html  RungeKuttaNew_8h_source.html  RungeKutta_8cpp.html  RungeKutta_8h.html  RungeKutta_8h_source.html  Simulator_8cpp.html  Simulator_8h.html  Simulator_8h_source.html  annotated.html  classODE_1_1Euler-members.html  classODE_1_1Euler.html  classODE_1_1EulerModified-members.html  classODE_1_1EulerModified.html  classODE_1_1OdeSolver-members.html  classODE_1_1OdeSolver.html  classODE_1_1OdeSolverNew-members.html  classODE_1_1OdeSolverNew.html  classODE_1_1RungeKutta-members.html  classODE_1_1RungeKutta.html  classODE_1_1RungeKuttaNew-members.html  classODE_1_1RungeKuttaNew.html  classODE_1_1Simulator-members.html  classODE_1_1Simulator.html  classes.html  dir_25c1e24df8eb89cd1471bce34ea88670.html  dir_6f676b9636c36037db61726b3adfe709.html  dir_777f2f8169d35ec231f23d77a1b1f37d.html  (+17 more)
latex/: EulerModified_8cpp.tex  EulerModified_8h.tex  Euler_8cpp.tex  Euler_8h.tex  OdeSolverNew_8cpp.tex  OdeSolverNew_8h.tex  OdeSolver_8cpp.tex  OdeSolver_8h.tex  RungeKuttaNew_8cpp.tex  RungeKuttaNew_8h.tex  RungeKutta_8cpp.tex  RungeKutta_8h.tex  Simulator_8cpp.tex  Simulator_8h.tex  annotated.tex  classODE_1_1Euler.eps  classODE_1_1Euler.tex  classODE_1_1EulerModified.eps  classODE_1_1EulerModified.tex  classODE_1_1OdeSolver.eps  classODE_1_1OdeSolver.tex  classODE_1_1OdeSolverNew.eps  classODE_1_1OdeSolverNew.tex  classODE_1_1RungeKutta.eps  classODE_1_1RungeKutta.tex  classODE_1_1RungeKuttaNew.eps  files.tex  (+16 more)
ode_solver/: CMakeLists.txt  package.xml
ode_solver/include/ode_solver/: Euler.h  EulerModified.h  OdeSolver.h  RungeKutta.h  Simulator.h
ode_solver/src/: Euler.cpp  EulerModified.cpp  OdeSolver.cpp  RungeKutta.cpp  Simulator.cpp
ode_solver_test/: CMakeLists.txt  package.xml
ode_solver_test/src/: pendulumScope_test.cpp  pendulum_test.cpp
(+90 files in other folders)
